Casa - inclusão de autenticação e temas - 23.01.2025

--- a/munus/pages/templates/pages/dashboard.html
+++ b/munus/pages/templates/pages/dashboard.html
@@ -1,9 +1,9 @@
 {% extends 'pages/base.html' %}
 
-{% block title %}Dashboard{% endblock %}
+{% block title %}Painel{% endblock %}
 
 {% block content %}
-    <h1>Dashboard de Análise</h1>
+    <h1>Painel de Análise</h1>
     
     <div class="row mb-4">
         <div class="col-md-12">
