--- a/munus/pages/templates/pages/home.html
+++ b/munus/pages/templates/pages/home.html
@@ -1,8 +1,8 @@
 {% extends 'pages/base.html' %}
 
-{% block title %}Home{% endblock %}
+{% block title %}Início{% endblock %}
 
 {% block content %}
-    <h1>Bem-vindo à página Home</h1>
-    <p>Esta é a página principal do site.</p>
+    <h1>Bem-vindo ao Munus</h1>
+    <p>Este é o painel principal do sistema.</p>
 {% endblock %}
