--- a/munus/pages/templates/pages/base.html
+++ b/munus/pages/templates/pages/base.html
@@ -25,12 +25,19 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'about' %}">Sobre</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'upload' %}">Enviar Arquivos</a>
-                    </li>
+                    {% if user.is_authenticated and user.profile.role in 'ANALISTA,GERENTE' %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'upload' %}">Enviar Arquivos</a>
+                        </li>
+                    {% endif %}
                 </ul>
                 <ul class="navbar-nav ms-auto">
                     {% if user.is_authenticated %}
+                        {% if user.profile.role == 'GERENTE' %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'admin:index' %}">Admin</a>
+                            </li>
+                        {% endif %}
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'profile' %}">Perfil</a>
                         </li>
