--- a/munus/pages/templates/pages/home.html
+++ b/munus/pages/templates/pages/home.html
@@ -13,6 +13,33 @@
                 <div class="card-body">
                     <p class="lead">Sistema de gestão e análise de dados</p>
                     
+                    <div class="row mb-4">
+                        <div class="col-md-4">
+                            <div class="card h-100">
+                                <div class="card-body">
+                                    <h5 class="card-title">📊 Análise de Dados</h5>
+                                    <p class="card-text">Visualize e processe dados de forma eficiente</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="card h-100">
+                                <div class="card-body">
+                                    <h5 class="card-title">🔒 Segurança</h5>
+                                    <p class="card-text">Controle de acesso e permissões por perfil</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="card h-100">
+                                <div class="card-body">
+                                    <h5 class="card-title">📈 Relatórios</h5>
+                                    <p class="card-text">Gere relatórios personalizados</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    
                     {% if user.is_authenticated %}
                         <div class="alert alert-success">
                             <h4>Olá, {{ user.email }}!</h4>
